--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "nodejs-mobile-react-native": "^0.8.2",
     "react": "18.1.0",
     "react-native": "0.70.0"
   },
