--- a/nodejs-assets/nodejs-project/package.json
+++ b/nodejs-assets/nodejs-project/package.json
@@ -1,12 +1,20 @@
 {
-  "//": 
-  ["Rename this sample file to package.json to use on your project."
-  , "The sample-package.json file will be overwritten in updates/reinstalls."
+  "//": [
+    "Rename this sample file to package.json to use on your project.",
+    "The sample-package.json file will be overwritten in updates/reinstalls."
   ],
   "name": "sample-node-project",
   "version": "0.0.1",
   "description": "node part of the project",
   "main": "main.js",
   "author": "janeasystems",
-  "license": ""
+  "license": "",
+  "dependencies": {
+    "@peculiar/webcrypto": "^1.4.0",
+    "@xmtp/xmtp-js": "^6.1.0",
+    "fetch-readablestream": "^0.2.0",
+    "node-fetch": "^2.6.7",
+    "patch-package": "^6.4.7",
+    "web-streams-node": "^0.4.0"
+  }
 }
