--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.19.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "babel-plugin-module-resolver": "^4.1.0",
+    "mobx": "^6.6.2",
+    "mobx-react": "^7.5.3",
     "nodejs-mobile-react-native": "^0.8.2",
     "react": "18.1.0",
     "react-native": "0.70.0",
     "react-native-safe-area-context": "^4.3.3",
-    "react-native-screens": "^3.17.0"
+    "react-native-screens": "^3.17.0",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -30,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "babel-jest": "^26.6.3",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.72.1",
