--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.70.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
+    "react-native-vector-icons": "^9.2.0",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.7.0"
   },
@@ -31,6 +32,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.69.6",
+    "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
