feat: conversation screen

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
       "@navigation": ["src/core/presentation/navigation"],
       "@feature-auth/screens": ["src/feature-auth/presentation"],
       "@components": ["src/core/presentation/components"],
+      "@images": ["src/assets/images"],
+      "@feature-chat/screens": ["src/feature-chat/presentation"],
     },
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
