--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.19.0",
+    "@gorhom/bottom-sheet": "^4.4.4",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -19,6 +20,8 @@
     "nodejs-mobile-react-native": "^0.8.2",
     "react": "18.1.0",
     "react-native": "0.70.0",
+    "react-native-gesture-handler": "^2.6.0",
+    "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-vector-icons": "^9.2.0",
